Fixed Spacing Notes updates scroll to top

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 
+h1,h2,h3,h4,h5,h6,p,a {
+  font-family: "Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
 .btn-group-lg > .btn, .btn-lg{
   border-radius:3rem;
 }
@@ -24,8 +28,21 @@ html {
 }
 
 .logo-text{
-  font-size: .6rem;
+  font-size: .55rem;
 }
+.logo-text span{
+  font-size:1rem;
+}
+
+.logo-img{
+  height:2rem !important;
+}
+
+.navbar-toggler{
+  font-size:1rem;
+  padding:0;
+}
+
 
 .vidheader {
     position: relative;
@@ -102,6 +119,19 @@ html {
   background: linear-gradient(90deg, rgba(54,60,117,1) 0%, rgb(209, 46, 137) 51%, rgba(24,175,238,1) 100%); 
 }
 
+.prevnextbutton{
+  display:block;
+  color:#ffffff;
+  background-color:#008dc1;
+  font-size:1rem;
+  border:none;
+  transition-duration:.3s;
+}
+
+.prevnextbutton:hover{
+  background-color:#d12e89;
+}
+
 .prevnext{
   text-align:center;
 }
@@ -139,90 +169,112 @@ html {
   color:#ffffff;
 }
 
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
 
+.form-control-dark {
+  color: #fff;
+  background-color: var(--bs-dark);
+  border-color: var(--bs-gray);
+}
+.form-control-dark:focus {
+  color: #fff;
+  background-color: var(--bs-dark);
+  border-color: #fff;
+  box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+}
 
-  
-  /* Media Query for devices withi coarse pointers and no hover functionality */
-  
-  /* This will use a fallback image instead of a video for devices that commonly do not support the HTML5 video element 
-  
-  @media (pointer: coarse) and (hover: none) {
-    .vidheader {
-      background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
-    }
-  
-    .vidheader video {
-      display: none;
-    }
-  }
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
 
-*/
+.text-small {
+  font-size: 85%;
+}
 
+.dropdown-toggle {
+  outline: 0;
+}
 
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
 
-  .b-example-divider {
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
-  
-  .form-control-dark {
-    color: #fff;
-    background-color: var(--bs-dark);
-    border-color: var(--bs-gray);
-  }
-  .form-control-dark:focus {
-    color: #fff;
-    background-color: var(--bs-dark);
-    border-color: #fff;
-    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
-  }
-  
-  .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-  }
-  
-  .text-small {
-    font-size: 85%;
-  }
-  
-  .dropdown-toggle {
-    outline: 0;
-  }
+#btn-back-to-top{
+  background-color:rgba(221, 12, 143,.5);
+  border-radius:4rem;
+  padding: .2rem .8rem .5rem .8rem;
+  font-size:1rem;
+}
 
+@media (min-width: 338px){
+  .navbar-toggler{
+    font-size:1.25rem;
+    padding:.25rem,.25rem;
+  }
+  #ceremony-title{
+    font-size:3rem;
+  }
+}
 
-  @media (min-width: 436px) {
-    .logo-text{
-      font-size:.9rem;
-    }
-  } 
-  
-    /* Small devices (landscape phones, 576px and up) */
-  @media (min-width: 576px) {
-    .logo-text{
-      font-size:1.25rem;
-    }
+@media (min-width: 436px) {
+  .logo-text{
+    font-size:.8rem;
   }
-  
-    /* Medium devices (tablets, 768px and up) */
-  @media (min-width: 768px) {
-  
+  .logo-text span{
+    font-size:1.4rem;
   }
-  
-    /* Large devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-  
+  .logo-img{
+    height:3rem !important;
   }
+  .prevnextbutton{
+    font-size:1.25rem;
+    display:inline-block;
+  }
+} 
+
+  /* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  .logo-text{
+    font-size:1rem;
+  }
+  .logo-text span{
+    font-size:1.7rem;
+  }
+}
+
+  /* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+
+}
+
+  /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
   
-    /* X-Large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-    .navbar {
-        background-image:linear-gradient(180deg,rgba(0, 0, 0, 1),rgba(0, 0, 0, .6),rgba(0, 0, 0, 0));
-    }
+}
+
+  /* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .navbar {
+      background-image:linear-gradient(180deg,rgba(0, 0, 0, 1),rgba(0, 0, 0, .6),rgba(0, 0, 0, 0));
   }
-    /* XX-Large devices (larger desktops, 1400px and up) */
-  @media (min-width: 1400px) {
+  .row-cols-xl-8 > * {
+    flex: 0 0 12.5%;
+    max-width: 12.5%;
   }
+  #ceremony-title{
+    font-size:3rem;
+  }
+}
+  /* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
+}
